feat(pandas): Table create SQL
