# api/internal/router/routerv2.go
@@ -51,6 +51,8 @@ func v2(r *gin.RouterGroup) {
 		r.GET("/pandas/instances/:instance-id/table-dependencies", core.Handle(pandas.TableDependencies))
 		// DDL structural transfer
 		r.POST("/pandas/utils/structural-transfer", core.Handle(pandas.StructuralTransfer))
+		// Table Create SQL
+		r.GET("/pandas/instances/:instance-id/databases/:database/tables/:table/create-sql", core.Handle(pandas.TableCreateSQL))
 	}
 	// The log module - storage
 	{
